Bug 308707 - While verifying the data, the download speed is wrong
Summary: While verifying the data, the download speed is wrong
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3.0
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-20 14:10 UTC by Emilio
Modified: 2012-11-02 12:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Ktorrent verifying files and arrows showing were the bug is (66.86 KB, image/png)
2012-10-20 14:12 UTC, Emilio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emilio 2012-10-20 14:10:11 UTC
While KTorrent is verifying a file, it shows wrong download speed.

It seems that downloads are stopped while verifying, but KTorrent shows speed as if the file were still being downloaded. As a consequence, the download speed shown in the status bar is also wrong.

Note that the download limits are working properly

See attached screenshot for more details.

Reproducible: Always

Steps to Reproduce:
1. Right click on a file and choose "Verify the data" (or a similar name)
2. While it is verifying the files, the download is stopped, but it shows speed in the file.
3. The speed in the status bar is also wrong
Comment 1 Emilio 2012-10-20 14:12:11 UTC
Created attachment 74674 [details]
Ktorrent verifying files and arrows showing were the bug is
Comment 2 Joris Guisson 2012-11-02 12:29:59 UTC
Git commit 3c1b918e23e11fefca86b377d83b6d7e42f877ff by Joris Guisson.
Committed on 02/11/2012 at 13:29.
Pushed by guisson into branch 'master'.

Make sure stats get updated properly during data check

M  +1    -0    ChangeLog
M  +2    -2    src/torrent/torrentcontrol.cpp

http://commits.kde.org/libktorrent/3c1b918e23e11fefca86b377d83b6d7e42f877ff
Comment 3 Joris Guisson 2012-11-02 12:35:25 UTC
Git commit 92e8fc65cf0bc35be5fa5cd1bb5e76061745a0cd by Joris Guisson.
Committed on 02/11/2012 at 13:29.
Pushed by guisson into branch '1.3'.

Backport to 1.3: Make sure stats get updated properly during data check

Conflicts:

	src/torrent/torrentcontrol.cpp

M  +1    -0    ChangeLog
M  +0    -2    src/torrent/torrentcontrol.cpp

http://commits.kde.org/libktorrent/92e8fc65cf0bc35be5fa5cd1bb5e76061745a0cd