Make sure stats get updated properly during data check

BUG: 308707